# brick-squad-sales-targets

./: .gitignore  CLAUDE-DATA-FORMAT.md  CLAUDE.md  README.md  config.yaml  generate_report.py  update.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  cache.py  config.py  logging.py
backend/app/db/: connection.py
backend/app/db/queries/: card_index.py  card_targets.py  ebay.py  market_data.py  portfolio.py  targets.py  trends.py
backend/app/models/: api.py  domain.py  export.py
backend/app/routers/: admin.py  bootstrap.py  card_targets.py  ebay.py  exports.py  health.py  imports.py  market_data.py  portfolio_entries.py  portfolios.py  targets.py  trends.py
backend/app/services/: card_targets.py  exports.py  imports.py  market_data.py  portfolio.py  targets.py  trends.py
backend/brick_squad_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: recalculate_targets.py
backend/tests/: test_card_targets.py  test_critical.py  test_routers.py  test_services.py  test_trends_engine.py
data/: Allen-Iverson.csv  Anthony-Black.csv  Ashton-Jeanty.csv  Bijan-Robinson.csv  Blake-Corum.csv  Bo-Nix.csv  Brandon-Miller.csv  Brock-Bowers.csv  Ceedee-Lamb.csv  Chet-Holmgren.csv  Christian-McCaffrey.csv  Colston-Loveland.csv  Cooper-Kupp.csv  DEVon-Achane.csv  Dak-Prescott.csv  Deni-Avdija.csv  Donovan-Mitchell.csv  Dylan-Harper.csv  JJ-McCarthy.csv  Ja-Morant.csv  Jahmyr-Gibbs.csv  Jalen-Brunson.csv  James-Harden.csv  Jared-Goff.csv  Jaxson-Dart.csv  Jayden-Daniels.csv  (+36 more)
(+166 files in other folders)
